--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GHOST Mission - University of Oslo | MUNIR-3 Satellite</title>
+  <title>GHOST Mission by Lyra | MUNIR‑3 Payload</title>
     <meta name="description" content="Student-led atmospheric research mission using sounding rocket technology. Learn about the GHOST mission and MUNIR-3 satellite at UiO." />
-    <meta name="author" content="University of Oslo" />
+  <meta name="author" content="Lyra" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="GHOST Mission - University of Oslo" />
+  <meta property="og:title" content="GHOST Mission by Lyra" />
     <meta property="og:description" content="Student-led atmospheric research mission using sounding rocket technology" />
     <meta property="og:type" content="website" />
     
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GHOST Mission - University of Oslo" />
+  <meta name="twitter:title" content="GHOST Mission by Lyra" />
   </head>
 
   <body>
