--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:," />
   <title>GHOST Mission by Lyra | MUNIR‑3 Payload</title>
     <meta name="description" content="Student-led atmospheric research mission using sounding rocket technology. Learn about the GHOST mission and MUNIR-3 satellite at UiO." />
   <meta name="author" content="Lyra" />
